# ChangeLog for dev-ruby/dm-migrations
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*dm-migrations-1.0.0 (21 Aug 2010)

  21 Aug 2010; Hans de Graaff <graaff@gentoo.org>
  +dm-migrations-1.0.0.ebuild:
  Version bump. Convert to ruby-fakegem.

  30 Nov 2008; Alex Legler <gentoo@a3li.info> +metadata.xml,
  +dm-migrations-0.9.7.ebuild:
  Initial commit, thanks to Cyril Mougel <cyril.mougel@gmail.com>.
