@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST dm-migrations-0.9.7.gem 19456 RMD160 f0c001db7f5fd951281b6e0c77ed9eb4aa76de69 SHA1 470697ad96f37e457182b9f0b6f83d358cc68a7b SHA256 7893ac82eb5e7b15a7d513c5cfb9d82c62e3d799e57579df6cdcfabf4d0efe1f
-DIST dm-migrations-1.0.0.gem 34304 RMD160 722933a83000b380491cece35631473665bd1692 SHA1 fee8213ee03405de2101d536cda0f567787b3c62 SHA256 b6c0e665369c3fb86eb526767f1749882405eb98548d7ac57fa5fc4a4c11c18f
-EBUILD dm-migrations-0.9.7.ebuild 360 RMD160 0a3aa5e33b3b4b585fa053643f57db25fb7c649a SHA1 c61d5e235d9fafb8a50f3362d2f56c4a55e01b2e SHA256 710ff404eb35800379cd25a798a70cf1d64c44484802087ec8644e8b30d7bfed
-EBUILD dm-migrations-1.0.0.ebuild 756 RMD160 7af7e2070b94f4715497b162870074d1044e4d6b SHA1 adc448a03edbe8c6d5fc2a3938cfaf3b5182ad9f SHA256 858cd4232c895532e9d5eafd82168ac00ab8d9038ca82aac87ccbc46065fed2b
-MISC ChangeLog 442 RMD160 b3ff408b68bf38436f925bc16443c38cf74a5057 SHA1 99dda092d9a694cb23b6b55f528bdf770dd63aad SHA256 43bd0b0e5328d892c73f37ee5126f2806c35f9c2dc721542508262a96cc10a81
-MISC metadata.xml 159 RMD160 eb364108353c7843cf1c01fba92129aaa46a0334 SHA1 0734f4c292968932afc57d0aa3a681c0b75b7bfc SHA256 abab7965b1f41e0acf6b54c554945c1c9fa35b5afab848d784dc58c298bc4679
+DIST dm-migrations-1.0.0.gem 34304 SHA256 b6c0e665369c3fb86eb526767f1749882405eb98548d7ac57fa5fc4a4c11c18f SHA512 558c747d5ff81e15d1b66aad48fd001f654b79af59036590be0e60e134cb9ab3fc520aaabcee86a5d9123973b7318760f4c9a117a8ea151b37a491d788338103 WHIRLPOOL 975e9ffa9ded8660b590e18571ffb989434bd252aa429ade215e6f79d9f39c3165c13d26ce634b8bf210ed33aac62b15492895da135a4679c7cac5b02196de60
+EBUILD dm-migrations-1.0.0.ebuild 756 SHA256 858cd4232c895532e9d5eafd82168ac00ab8d9038ca82aac87ccbc46065fed2b SHA512 7cc52fdf8a3c566e6b1aa752811c5df717a07b607668bbf4f7f2d9bdd3ebd73d3ee7152dea74590e83adadd36fa8e76627d6fa811dbffbf083d51cd840811959 WHIRLPOOL 77cbde3ed0f1fcbd6ab3a11e737eeab38422fd87fce71ae8545dd27f900f29593f26c2cf242eb4e5c23c2f9ec676a50a533c625d4767dfe595f94c340cf27012
+MISC ChangeLog 533 SHA256 9b14e78c73a175831b30f086a29384e06d9f0a67e71b3a2c8cc11f6d68a33ff5 SHA512 30045bb3c8a09c8507908c9950685abcb35b477f0af9af142ee96991ff228de5eff3c07f99c2a70b7256cb2d1ad5cc3ccb1ecdda8066c12ed04d0c7b142abf9b WHIRLPOOL 3f9e2e7acffcd51d609afac7480b108c9f664286188b1b16ecb347f951e3bded43899c8571cde2690ac4d5fc5e43d694454af92b0a65e9b9ddd204db929a013d
+MISC metadata.xml 159 SHA256 abab7965b1f41e0acf6b54c554945c1c9fa35b5afab848d784dc58c298bc4679 SHA512 39d857a527ff3a066b0fa7a6e57f789e60178ca13c5ddaa93802b58ec8d45f47418c2ce85c389e2eed619216aca72d761651efa5a401d84357df9b24b478b3fb WHIRLPOOL ddb2c776f81935d41c9e81592c1ddbabc4f94422f44bab6e312730aa541994234a2405ea5ba2782818404a730be20dc53c9cc205efbf8f0843bd21cf839b0980
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAkxvcGsACgkQZihJkut28Sv3qQD/S1fsXLHzNE6tqSkimkZEXWyV
-vhl/uBst2nNpYcEzZAsA/1voEofWvgvgOv3uKx/rsQr6RPU4s4QQP08Py2ycaJgg
-=83J5
+iF4EAREIAAYFAlGrCkMACgkQiIP6VqMIqNclvgD9FI48MtsoHTmP2/5Jvo9vJPZa
+VasXjPV4kqPBgJ3wcgwA/R7Q+tAjjtdNthwqGmFNUlhQrkByKt5Tx2rtNNhesMOR
+=ZEPw
 -----END PGP SIGNATURE-----
