@@ -1,15 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-inherit gems
-
-DESCRIPTION="DataMapper plugin for writing and specing migrations"
-HOMEPAGE="http://github.com/sam/dm-more/tree/master/dm-migrations"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="~x86 ~amd64"
-IUSE=""
-
-RDEPEND=">=dev-ruby/dm-core-0.9.7"
