@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/dm-migrations
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  02 Jun 2013; Hans de Graaff <graaff@gentoo.org> -dm-migrations-0.9.7.ebuild:
+  Cleanup.
 
 *dm-migrations-1.0.0 (21 Aug 2010)
 
